# scipy

./: .gitignore  CMakeLists.txt  a.f90  a.out  b.f90  environment.yml  file_common_block_d9mach.mod  lf.sh  script.sh  script2.sh
scipy/integrate/: meson.build
scipy/integrate/dop/: dop853.f  dopri5.f
scipy/integrate/mach/: d1mach.f
scipy/integrate/quadpack/: dqc25c.f  dqc25f.f  dqc25s.f
scipy/integrate/tests/: test_quadpack.py
scipy/interpolate/: meson.build
scipy/interpolate/fitpack/: clocur.f  evapol.f  fpcuro.f  fpgivs.f  fppogr.f  fppola.f  fpspgr.f  fpsphe.f  fpsurf.f  parcur.f  pogrid.f  polar.f  spgrid.f
scipy/odr/: meson.build
scipy/optimize/: _minimize.py  meson.build
scipy/optimize/_trustregion_constr/tests/: test_report.py
scipy/optimize/slsqp/: slsqp_optmz.f
scipy/optimize/tests/: test__basinhopping.py  test__differential_evolution.py  test__dual_annealing.py  test__shgo.py  test_cobyla.py  test_constraint_conversion.py  test_lbfgsb_hessinv.py  test_lbfgsb_setulb.py  test_minimize_constrained.py  test_optimize.py
scipy/sparse/linalg/_eigen/arpack/: meson.build
scipy/sparse/linalg/_eigen/arpack/ARPACK/SRC/: cgetv0.f
scipy/special/: meson.build
scipy/special/cdflib/: cumchn.f  cumnor.f
scipy/special/mach/: d1mach.f  i1mach.f
scipy/special/specfun/: specfun.f
scipy/special/tests/: test_basic.py  test_cdflib.py  test_cdft_asymptotic.py  test_cython_special.py  test_data.py  test_exponential_integrals.py  test_mpmath.py  test_nan_inputs.py  test_orthogonal.py  test_orthogonal_eval.py  test_spherical_bessel.py
scipy/stats/statlib/: ansari.f  spearman.f
